--- a/src/app/components/utils/video-view/video-view.component.html
+++ b/src/app/components/utils/video-view/video-view.component.html
@@ -1,2 +1,2 @@
-<iframe width="560" height="315" [src]="currentVideo" frameborder="0"
+<iframe id="player" width="560" height="315" [src]="currentVideo" frameborder="0"
     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
