Addec copyUrl() and open() to control elements

--- a/src/app/components/utils/control-elements/control-elements.component.html
+++ b/src/app/components/utils/control-elements/control-elements.component.html
@@ -5,7 +5,7 @@
 </div>
 <div>
     <p></p>
-    <button class="centerButton" mat-raised-button>Copy URL</button>
-    <button class="centerButton" mat-raised-button>Open in Browser</button>
+    <button (click)="copyUrl()" class="centerButton" mat-raised-button color="accent">Copy URL</button>
+    <button (click)="open()" class="centerButton" mat-raised-button color="accent">Open in Browser</button>
 
 </div>
