--- a/src/app/components/utils/control-elements/control-elements.component.html
+++ b/src/app/components/utils/control-elements/control-elements.component.html
@@ -1,9 +1,9 @@
 <div class="marginleft">
     <p>{{ video }}</p>
-    <mat-checkbox>Autoplay</mat-checkbox><br>
-    <mat-checkbox>Loop</mat-checkbox>
+    <mat-checkbox #autoplay (change)="updatePlayerConfig(autoplay.checked, loop.checked)">Autoplay</mat-checkbox><br>
+    <mat-checkbox #loop (change)="updatePlayerConfig(autoplay.checked, loop.checked)">Loop</mat-checkbox>
 </div>
-<div>
+<div class="buttons">
     <p></p>
     <button (click)="copyUrl()" class="centerButton" mat-raised-button color="accent">Copy URL</button>
     <button (click)="open()" class="centerButton" mat-raised-button color="accent">Open in Browser</button>
