--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
 @import url("../node_modules/bootstrap/dist/css/bootstrap.min.css");
+@import url("assets/plyr.css");
 
 html,
 body {
