Added Loading and config integratgion

--- a/src/app/components/utils/video-view/video-view.component.html
+++ b/src/app/components/utils/video-view/video-view.component.html
@@ -2,7 +2,7 @@
     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe-->
 <div class="plyr__video-embed" id="player">
     <iframe
-        src="https://www.youtube.com/watch?v=bHscSXzQt60?loop=1"
+        src="https://www.youtube.com/embed/SVp_PF35ypc"
         allowfullscreen
         frameborder="0"
         allowtransparency
@@ -10,6 +10,6 @@
     ></iframe>
 </div>
 
-<div *ngIf="loading">
+<div class="showLoading" *ngIf="loading">
     <mat-spinner></mat-spinner>
 </div>
