Changed max width of loading div to 50%

--- a/src/app/home/components/video-view/video-view.component.scss
+++ b/src/app/home/components/video-view/video-view.component.scss
@@ -8,8 +8,8 @@ iframe {
 }
 
 .showLoading {
-    width: 100%;
-    height: 100vh;;
+    width: 50%;
+    height: 100vh;
     background-color: #171e22;
     z-index: 999999;
     position: absolute;
