--- a/src/matStyle.scss
+++ b/src/matStyle.scss
@@ -1,5 +1,5 @@
 @use '~@angular/material' as mat;
-@import '~@angular/material/theming';
+@import "~@angular/material/theming";
 // Plus imports for other components in your app.
 
 // Include the common styles for Angular Material. We include this here so that you only
@@ -11,10 +11,10 @@
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
 $candy-app-primary: mat.define-palette(mat.$grey-palette);
-$candy-app-accent:  mat.define-palette(mat.$blue-grey-palette, 800, A400, A300);
+$candy-app-accent: mat.define-palette(mat.$blue-grey-palette, 800, A400, A300);
 
 // The warn palette is optional (defaults to red).
-$candy-app-warn:    mat.define-palette(mat.$red-palette);
+$candy-app-warn: mat.define-palette(mat.$red-palette);
 
 // Create the theme object (a Sass map containing all of the palettes).
 $candy-app-theme: mat.define-dark-theme($candy-app-primary, $candy-app-accent, $candy-app-warn);
@@ -23,3 +23,7 @@ $candy-app-theme: mat.define-dark-theme($candy-app-primary, $candy-app-accent, $
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
 @include mat.all-component-themes($candy-app-theme);
+
+.mat-checkbox-checkmark-path {
+    stroke: #e3e1de !important;
+}
