Replaced boostrap with angular material grid view

--- a/src/app/home/pages/main/main.component.html
+++ b/src/app/home/pages/main/main.component.html
@@ -1,9 +1,9 @@
-<div class="row">
-    <div class="col-6">
+<mat-grid-list cols="2" rowHeight="100vh">
+    <mat-grid-tile>
         <app-control-elements></app-control-elements>
         <app-bottom-button></app-bottom-button>
-    </div>
-    <div class="col-6">
+    </mat-grid-tile>
+    <mat-grid-tile>
         <app-video-view></app-video-view>
-    </div>
-</div>
+    </mat-grid-tile>
+</mat-grid-list>
