--- a/src/app/explore/pages/explore/explore.component.html
+++ b/src/app/explore/pages/explore/explore.component.html
@@ -1,18 +1,27 @@
 <div>
-  <table class="table table-dark">
-    <thead>
-      <tr>
-        <th scope="col">ID</th>
-        <th scope="col">Title</th>
-        <th scope="col">Thumbnail</th>
-      </tr>
-    </thead>
-    <tbody *ngFor="let video of allVideos">
-      <tr>
-        <th scope="row">{{ video.id }}</th>
-        <td (click)="setVideo(video)">{{ video.title }}</td>
-        <td><img width="64px" height="64px" [src]="video.thumbnail" alt=""></td>
-      </tr>
-    </tbody>
+  <form *ngIf="showSearchField" class="sarch-form">
+    <mat-form-field appearance="fill">
+      <mat-label>Search Video</mat-label>
+      <input id="searchButton" (keyup)="searchInput($event)" matInput>
+    </mat-form-field>
+  </form>
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef> ID </th>
+      <td mat-cell *matCellDef="let video"> {{video.id}} </td>
+    </ng-container>
+    <ng-container matColumnDef="title">
+      <th mat-header-cell *matHeaderCellDef> Title </th>
+      <td mat-cell *matCellDef="let video"> {{video.title}} </td>
+    </ng-container>
+    <ng-container matColumnDef="thumbnail">
+      <th mat-header-cell *matHeaderCellDef> Thumbnail </th>
+      <td mat-cell *matCellDef="let video">
+        <img width="64px" height="64px" [src]="video.thumbnail" alt="">
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr *matRowDef="let video; columns: displayedColumns;" (click)="setVideo(video)" mat-row></tr>
   </table>
 </div>
